--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev:prod": "vite --mode production",
     "build": "vue-tsc --noEmit && vite build"
   },
-
   "dependencies": {
     "@vueuse/core": "8.5.0",
     "@vueuse/integrations": "8.5.0",
@@ -26,6 +25,7 @@
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "autoprefixer": "^10.4.12",
     "consola": "^2.15.3",
     "eruda": "^2.4.1",
     "eslint": "^8.16.0",
@@ -40,6 +40,7 @@
     "postcss-less": "^6.0.0",
     "postcss-px-to-viewport-8-plugin": "^1.1.3",
     "prettier": "^2.6.2",
+    "sass": "^1.55.0",
     "stylelint": "^14.8.5",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^7.0.0",
@@ -47,6 +48,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
     "typescript": "^4.7.2",
+    "unplugin-vue-components": "^0.22.8",
     "vite": "^2.9.9",
     "vite-plugin-eruda": "^1.0.1",
     "vite-plugin-mock": "^2.9.6",
