--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
-    "@vueuse/core": "8.5.0",
-    "@vueuse/integrations": "8.5.0",
-    "axios": "0.27.2",
-    "pinia": "^2.0.14",
+    "@vueuse/core": "^12.7.0",
+    "@vueuse/integrations": "^12.7.0",
+    "axios": "^1.8.1",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "qs": "^6.10.3",
     "universal-cookie": "^4.0.4",
-    "vant": "^3.4.9",
-    "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
+    "vant": "^4.9.17",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
@@ -35,12 +36,13 @@
     "husky": "7.0.4",
     "lint-staged": "12.4.1",
     "mockjs": "^1.1.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.31",
     "postcss-html": "^1.4.1",
     "postcss-less": "^6.0.0",
+    "postcss-mobile-forever": "^4.0.0",
     "postcss-px-to-viewport-8-plugin": "^1.1.3",
     "prettier": "^2.6.2",
-    "sass": "^1.55.0",
+    "sass": "^1.85.1",
     "stylelint": "^14.8.5",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^7.0.0",
