--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,14 @@
-VITE_TOKEN_KEY=tokenKey
-VITE_URL_PREFIX=/api
+# Whether to open mock
+VITE_USE_MOCK=true
+
+# 是否开启本地代理
+VITE_USE_PROXY=true
+
+# vite publicPath
+VITE_PUBLIC_PATH=/
+
+#vue-router base
+VITE_ROUTER_BASE=''
+
+# 服务端接口地址
+VITE_APP_BASE_API=https://share.sanguosha.cn/
