--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,14 @@
 # Whether to open mock
-VITE_USE_MOCK = true
+VITE_USE_MOCK=true
 
-# public path
-VITE_PUBLIC_PATH = /
+# 是否开启本地代理
+VITE_USE_PROXY=true
 
-VITE_APP_BASE_API = 'https://10.225.137.89:7776/';
+# vite publicPath
+VITE_PUBLIC_PATH=/
 
+#vue-router base
+VITE_ROUTER_BASE=''
 
-
+# 服务端接口地址
+VITE_APP_BASE_API=https://share.sanguosha.cn/
