--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-h5-template",
+  "private": true,
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,55 +9,29 @@
     "build": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
-    "@vueuse/core": "^12.7.0",
-    "@vueuse/integrations": "^12.7.0",
-    "axios": "^1.8.1",
-    "pinia": "^3.0.1",
-    "pinia-plugin-persistedstate": "^4.2.0",
-    "qs": "^6.10.3",
-    "universal-cookie": "^4.0.4",
-    "vant": "^4.9.17",
+    "axios": "^1.9.0",
+    "pinia": "^3.0.2",
+    "vant": "^4.9.19",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.35",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "@vitejs/plugin-legacy": "^1.8.2",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "autoprefixer": "^10.4.12",
-    "consola": "^2.15.3",
-    "eruda": "^2.4.1",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^9.0.1",
-    "husky": "7.0.4",
-    "lint-staged": "12.4.1",
+    "@types/node": "^22.15.18",
+    "@vant/auto-import-resolver": "^1.3.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "mockjs": "^1.1.0",
-    "postcss": "^8.4.31",
-    "postcss-html": "^1.4.1",
-    "postcss-less": "^6.0.0",
-    "postcss-mobile-forever": "^4.0.0",
-    "postcss-px-to-viewport-8-plugin": "^1.1.3",
-    "prettier": "^2.6.2",
-    "sass": "^1.85.1",
-    "stylelint": "^14.8.5",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^7.0.0",
-    "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-order": "^5.0.0",
-    "typescript": "^4.7.2",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "^2.9.9",
-    "vite-plugin-eruda": "^1.0.1",
-    "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-style-import": "^2.0.0",
-    "vue-eslint-parser": "^9.0.2",
-    "vue-tsc": "^0.34.16",
-    "yorkie": "^2.0.0"
+    "path": "^0.12.7",
+    "postcss": "^8.5.3",
+    "postcss-mobile-forever": "^5.0.0",
+    "sass": "^1.89.0",
+    "typescript": "^5.8.3",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-vue-components": "^28.5.0",
+    "vite": "^6.3.5",
+    "vite-plugin-mock": "^3.0.2",
+    "vue-tsc": "^2.2.8"
   }
 }
